added crack support